--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,11 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.attractions-list img {
+    width: 100%; /* หรือกำหนดค่าคงที่ เช่น 300px */
+    height: 600px; /* กำหนดความสูงที่ต้องการ */
+    object-fit: cover; /* ครอบรูปให้เต็มกรอบโดยไม่เสียสัดส่วน */
+    border-radius: 5px; /* ทำมุมโค้งมนเล็กน้อย */
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
