--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
     color: #000000;
     background-color: #f9f9f9;
+    font-family: "Sriracha", serif;
 }
 
 header {
